tests/array_type_const_fn_call_bad_for_limit.sl
fn spins(n i32) i32 {
    var i i32 = 0
    for i = 0; i < n; i += 0 {
    }
    return i
}

fn main() {
    var a [i32 spins(1)]
    _ = a
}
